--- a/resources/mars.desktop
+++ b/resources/mars.desktop
@@ -3,9 +3,10 @@ Type=Application
 Name=M.A.R.S.
 GenericName=Shooter Game
 Comment=M.A.R.S. - a ridiculous shooter
+Comment[de]=M.A.R.S. - ein irrer Shooter.
 Exec=mars
 Icon=mars
 Terminal=false
-Categories=Game;ActionGame; 
+Categories=Game;ActionGame;
 StartupNotify=false
-MimeType=application;
+Keywords=ships;space;shooter;2D;opengl;sfml;shader;particle;effects;multiplayer;
