--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,6 +3,9 @@
 # Actually compile the executable
 #####################################################################
 
+# required for M_PI on some platforms
+add_definitions(-D_USE_MATH_DEFINES)
+
 # determine source and header files
 file(GLOB MARS_SOURCES */*.cpp)
 file(GLOB MARS_HEADERS ${MARS_SOURCE_DIR}/include/*/*.hpp ${MARS_SOURCE_DIR}/include/*.hpp)
@@ -52,7 +55,7 @@ endif(APPLE)
 target_link_libraries(
 	mars
 		${FOUNDATION_LIBRARY}
-		${SFML_LIBRARIES}
+		sfml-graphics sfml-audio
 		${OPENGL_LIBRARIES}
 		${XRANDR_LIBRARY}
 		${FRIBIDI_LIBRARY}
